--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "restaurant-page",
   "version": "1.0.0",
-  "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
-  "main": "main.js",
+  "description": "![screenshot](./app_screenshot.png)",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Shaher-11/restaurant-page.git"
   },
-  "author": "shaher",
+  "keywords": [],
+  "author": "Shaher",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Shaher-11/restaurant-page/issues"
@@ -18,6 +22,7 @@
   "homepage": "https://github.com/Shaher-11/restaurant-page#readme",
   "devDependencies": {
     "webpack": "^5.39.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.1"
   }
 }
